[package]
name = "libicsneo-rs"
version = "0.1.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/intrepidcs/libicsneo-rs"
authors = ["David Rebbe <drebbe@intrepidcs.com>"]
readme = "readme.md"
description = "Rust API for libicsneo"
keywords = ["libicsneo"]

[lib]
name = "libicsneo"
crate-type = ["cdylib"]


[dependencies]
libicsneo-sys = "0.1.14"
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3", "abi3-py37", "anyhow", "chrono"] }

[features]
default = ["test_zero_devices"]
test_zero_devices = []
