[package]
name = "icsneo"
version = "0.1.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/intrepidcs/libicsneo-rs"
authors = ["David Rebbe <drebbe@intrepidcs.com>"]
readme = "readme.md"
description = "Rust API for libicsneo"
keywords = ["libicsneo"]

[lib]
crate-type = ["lib", "cdylib"]


[dependencies]
libicsneo-sys = "0.1.15"
#pyo3 = {features = ["extension-module", "abi3", "abi3-py37", "anyhow", "chrono"] }

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module", "abi3", "abi3-py37", "anyhow", "chrono"]
optional = true

[features]
default = []
python = ["pyo3"]
