[package]
name = "libicsneo"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/intrepidcs/libicsneo-rs"
authors = ["David Rebbe <drebbe@intrepidcs.com>"]
readme = "readme.md"
description = "Rust API for libicsneo"
keywords = ["libicsneo"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
libicsneo-sys = { path = "../libicsneo-sys", version="0.2.0" }